# zmk-dongle-screen

./: CMakeLists.txt
boards/shields/dongle_screen/: CMakeLists.txt  Kconfig.defconfig
boards/shields/dongle_screen/include/: fonts.h
boards/shields/dongle_screen/src/: custom_status_screen.c
boards/shields/dongle_screen/src/fonts/: TmoneyRound_20.c  TmoneyRound_40.c  apple_16.c
boards/shields/dongle_screen/src/widgets/: CMakeLists.txt  battery_status.c  layer_status.c  mod_status.c  mod_status.h  output_status.c  output_status.h  signal_status.c  signal_status.h  wpm_status.c  wpm_status.h
modules/lvgl/: CMakeLists.txt
